sc/source/ui/namedlg/namemgrtable.cxx
@@ -60,6 +60,7 @@ ScRangeManagerTable::ScRangeManagerTable(std::unique_ptr<weld::TreeView> xTreeVi
     , m_RangeMap(rRangeMap)
     , maPos( rPos )
     , m_nId(0)
+    , mbNeedUpdate(true)
 {
     auto nColWidth = m_xTreeView->get_size_request().Width() / 7;
     std::vector<int> aWidths;
@@ -91,7 +92,10 @@ const ScRangeData* ScRangeManagerTable::findRangeData(const ScRangeNameLine& rLi
 
 void ScRangeManagerTable::CheckForFormulaString()
 {
-    m_xTreeView->visible_foreach([this](weld::TreeIter& rEntry){
+    if (UpdatesBlocked())
+        return;
+
+    auto lambda = [this](weld::TreeIter& rEntry){
         OUString sId(m_xTreeView->get_id(rEntry));
         std::map<OUString, bool>::const_iterator itr = maCalculatedFormulaEntries.find(sId);
         if (itr == maCalculatedFormulaEntries.end() || !itr->second)
@@ -105,7 +109,12 @@ void ScRangeManagerTable::CheckForFormulaString()
             maCalculatedFormulaEntries.insert( std::pair<OUString, bool>(sId, true) );
         }
         return false;
-    });
+    };
+
+    // ensure all visible entries are up to date
+    m_xTreeView->visible_foreach(lambda);
+    // and ensure all selected entries are up to date
+    m_xTreeView->selected_foreach(lambda);
 }
 
 IMPL_LINK_NOARG(ScRangeManagerTable, SizeAllocHdl, const Size&, void)
